fixed spacing on posting reviews

--- a/frontend/src/components/CreateReview/CreateReview.css
+++ b/frontend/src/components/CreateReview/CreateReview.css
@@ -9,7 +9,7 @@
 }
 
 .create__review__container {
-    height: 35vh;
+    height: 40vh;
     width: 40vw;
     display: flex;
     flex-direction: column;
